--- a/matine/package.json
+++ b/matine/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@mantine/core": "^5.2.0",
+    "@mantine/form": "^5.2.3",
     "@mantine/hooks": "^5.2.0",
     "@reduxjs/toolkit": "^1.8.4",
     "@tabler/icons": "^1.84.0",
